# rewm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
config/: config.toml
images/: blue.xpm  close.xpm  darkblue.xpm  lightblue.xpm  selectedblue.xpm  test.xpm
src/: CMakeLists.txt  assets.cpp  assets.hpp  border.cpp  border.hpp  border_container.cpp  border_container.hpp  button.cpp  button.hpp  client.cpp  client.hpp  client_component.cpp  client_component.hpp  container.cpp  container.hpp  drawable_window_wrapper.cpp  drawable_window_wrapper.hpp  horizontal_array.cpp  horizontal_array.hpp  managed_window.cpp  managed_window.hpp  monitor.cpp  monitor.hpp  padding.cpp  padding.hpp  primary_container.cpp  primary_container.hpp  rewm.cpp  rewmsh.cpp  taskbar.cpp  taskbar.hpp  tasklist.hpp  titlebar.cpp  titlebar.hpp  vertical_array.cpp  vertical_array.hpp  window_wrapper.cpp  window_wrapper.hpp  wm.cpp  wm.hpp  (+10 more)
